# kampua

./: .gitignore  CMakeLists.txt  README.md
code/: binary_expression.cpp  binary_expression.hpp  call_expression.hpp  cleaver.hpp  code_cleaver.cpp  code_cleaver.hpp  concepts.hpp  expression.cpp  expression.hpp  float_expression.cpp  float_expression.hpp  identifier.cpp  identifier.hpp  identifier_expression.cpp  identifier_expression.hpp  integer_expression.cpp  integer_expression.hpp  kind_cleaver.hpp  list_expression.cpp  list_expression.hpp  main.cpp  simple_cleaver.hpp  sort.cpp  sort.hpp  unary_expression.cpp  unary_expression.hpp  vague_cleaver.hpp  vague_kind_cleaver.hpp  vessel.cpp  vessel.hpp
code/ast/: asn.cpp  asn.hpp  function.cpp  function.hpp  function_prototype.cpp  function_prototype.hpp  node.cpp  node.hpp  vessel.cpp  vessel.hpp
code/cleave/: cleave.hpp  simple_cleaver.hpp
code/kampua/: cleaver.hpp
code/kampua/cleave/: cleaver.hpp
code/kampua/tree/: factory.hpp
code/kampua/tree/basis/: declaration.hpp  identifier_builder.hpp  node_factory.hpp  type_builder.hpp  vessel_builder.hpp
code/parser/: parser.hpp  split.hpp  token.hpp
code/tree/: function.hpp  function_prototype.hpp  node.cpp  node.hpp  vessel.hpp
code/tree/basis/: identifier.hpp  node.hpp  type.hpp  vessel.hpp
code/tree/composite/: function.hpp  function_prototype.hpp
sample/: main.kp
